# url-shortener-fastapi

./: .gitignore  .pre-commit-config.yaml  README.md  dd.py  main.py  pyproject.toml
.github/workflows/: hello-actions.yaml  python-app.yaml  python-checks.yaml
url-shortener/: .coveragerc  .env.template  app_lifespan.py  log.txt  main.py  manage.py  stuff.py
url-shortener/api/: __init__.py  main_views.py  redirect_views.py
url-shortener/api/api_v1/: __init__.py  dependencies.py  redirect_views.py  redis_db.py  views.py
url-shortener/api/api_v1/auth/services/: __init__.py  redis_tokens_helper.py  redis_users_helper.py  tokens_helper.py  users_helper.py
url-shortener/api/api_v1/films/: crud.py  endpoints.py
url-shortener/api/api_v1/films/views/: __init__.py  details_router.py  list_router.py
url-shortener/api/api_v1/short_urls/: crud.py  dependencies.py  endpoints.py  redirect_views.py  views.py
url-shortener/api/api_v1/short_urls/views/: __init__.py  details_router.py  details_views.py  list_router.py  list_views.py
url-shortener/commands/: cli.py  hello.py  list.py  tokens.py
url-shortener/core/: config.py
url-shortener/dependencies/: auth.py  short_urls.py
url-shortener/rest/: __init__.py  main_views.py
url-shortener/rest/short_urls/: __init__.py  create_views.py  list_views.py
url-shortener/schemas/: __init__..py  __init__.py  film.py  films.py  short_url.py  user.py
url-shortener/services/auth/: __init__.py  redis_tokens_helper.py  redis_users_helper.py  tokens_helper.py  users_helper.py
url-shortener/storage/short_urls/: __init__.py  crud.py  exceptions.py
url-shortener/templates/: about.html  base.html  home.html  init.html
url-shortener/templates/components/: navbar.html
url-shortener/templates/macro/: form_field.html  form_fields.html
url-shortener/templates/short-urls/: create.html  delete.html  list.html
url-shortener/templating/: __init__.py  jinja_templates.py
url-shortener/tests/: conftest.py  test_platform.py
url-shortener/tests/test_api/: __init__.py  conftest.py  test_main_views.py  test_views.py
url-shortener/tests/test_api/test_api_v1/: test_dependencies.py
url-shortener/tests/test_api/test_api_v1/test_auth/test_services/: test_redis_tokens_helper.py  test_tokens_helper.py
url-shortener/tests/test_api/test_api_v1/test_films/: test_crud.py
url-shortener/tests/test_api/test_api_v1/test_short_urls/: test_crud.py
url-shortener/tests/test_api/test_api_v1/test_short_urls/test_views/test_details_views/: test_delete.py  test_put.py  test_update.py  test_update_partial.py
url-shortener/tests/test_api/test_api_v1/test_short_urls/test_views/test_list_views/: test_create.py  test_transfer.py
url-shortener/tests/test_schemas/: test_schemas_films.py  test_schemas_short_url.py  test_short_url.py  test_user.py
